# fabricai-inference-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
config/: routing.yaml
docs/: architecture.md
examples/: demo_sse.ipynb  fallback_to_cloud.py  local_test.py
fabricai_inference_server/: app.py  engine.py  exceptions.py  logging_config.py  models.py  redis_session_manager.py  router.py  server.py  settings.py
fabricai_inference_server/backends/: __init__.py  anthropic.py  google.py  ollama.py  openai_backend.py
fabricai_inference_server/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
fabricai_inference_server/router/: __init__.py  adaptive.py  cascade.py  heuristic.py  quality.py
fabricai_inference_server/schemas/: __init__.py  openai.py
fabricai_inference_server/session/: __init__.py  manager.py
fabricai_inference_server/telemetry/: __init__.py  collector.py  cost.py
fabricai_inference_server/utils/: prompt_analysis.py  tokens.py
tests/: conftest.py  test_engine.py  test_server.py  test_telemetry.py
tests/test_backends/: test_anthropic.py  test_google.py  test_ollama.py
tests/test_middleware/: test_auth.py  test_rate_limit.py
tests/test_router/: test_adaptive.py  test_cascade.py  test_heuristic.py  test_prompt_analysis.py  test_quality.py
