[project]
name = "fabricai-inference-server"
version = "0.3.0"
description = "An intelligent local/cloud hybrid LLM routing gateway with OpenAI-compatible API"
license = {text = "MIT"}
authors = [{name = "Thomas Carmichael", email = "ThomasCarmichael@pm.me"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.0",
    # Cloud providers
    "anthropic>=0.52.0",
    "openai>=1.75.0",
    "google-genai>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 90
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
